--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -1,1 +1,74 @@
-/* Write your styles */
+body{
+    background-color: #bca77b;
+}
+ul,ol{
+   list-style: none;
+}
+/*.am-box-list{
+    overflow:hidden;
+    float: left;
+}*/
+.am-box-list li{
+    width:28px;
+    height:28px;
+    text-align:center;
+    background:#cb0000;
+    border-radius:50%;
+    float: left;
+    margin:0 10px;
+    line-height:25px;
+    color:#fff;
+    font-size:10px;
+    font-weight:bold;
+}
+.y{
+    transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+.e{
+    transition: all 1s;
+    -moz-transition: all 1s;
+    -webkit-transition: all 0.8s;
+    -o-transition: all 1s;
+}
+.s{
+    transition: all 1.5s;
+    -moz-transition: all 1.5s;
+    -webkit-transition: all 1.2s;
+    -o-transition: all 1.5s;
+}
+.s{
+    transition: all 2s;
+    -moz-transition: all 2s;
+    -webkit-transition: all 1.6s;
+    -o-transition: all 2s;
+}
+.w{
+    transition: all 2.5s;
+    -moz-transition: all 2.5s;
+    -webkit-transition: all 2s;
+    -o-transition: all 2.5s;
+}
+.l{
+    transition: all 3s;
+    -moz-transition: all 3s;
+    -webkit-transition: all 2.4s;
+    -o-transition: all 3s;
+}
+.q{
+    transition: all 3.5s;
+    -moz-transition: all 3.5s;
+    -webkit-transition: all 2.8s;
+    -o-transition: all 3.5s;
+}
+.am-button{
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
